# NekoServer

./: .dockerignore  .env  .gitattributes  .gitignore  Cargo.toml  Dockerfile  README.md  build-all.ps1  cloudbuild.yaml  compile.bat  db.sqlite  db.sqlite-shm  db.sqlite-wal  docker-compose.yml  flake.nix  renovate.json
.github/workflows/: GCP-deploy.yml  build-docker.yml
.woodpecker/: build-docker.yml  docker-manifest.yml
benches/: image_gen.rs
charts/neko-server/: Chart.yaml  values.yaml
charts/neko-server/templates/: configmap.yaml  deployment.yaml  redis-deployment.yaml  redis-pvc.yaml  redis-secret.yaml  redis-service.yaml  service.yaml
gallery-dl-worker/: Dockerfile  requirements.txt  worker.py
sql/: ImageInfo_add_defaults.sql  ImageInfo_crate.sql
src/: const_image.rs  count_image.rs  gallery_dl.rs  image_cache.rs  lib.rs  main.rs  season_images.rs
tests/: fill_cache.py  test_gallery_dl.py
