[package]
name = "neko_server"
version = "1.0.4"
edition = "2021"
[[bin]]
name = "neko_server"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Async
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
# Webserver
warp = "0.4"
# Interact with Redis Database
redis = { version = "0.22", features = ["tokio-comp", "connection-manager"] }
# Manipulate Images
image = "0.24"
# Logging
log = "0.4"
env_logger = "0.9"
chrono = "0.4"
# Command line arguments parsing
clap = { version = "4.0", features = ["derive"] }
# Graceful shutdown
signal-hook = "0.3.*"
# Caching
lazy_static = "1.4.*"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

# Build dependencies optimised for release
[profile.dev.package."*"]
opt-level = 3
