[package]
name = "neko_server"
version = "1.0.4"
edition = "2021"
[[bin]]
name = "neko_server"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Async
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
# Webserver
warp = { version = "0.4", features = ["server"] }
# Interact with Redis Database
redis = { version = "0.32", features = ["tokio-comp", "connection-manager"] }
# Manipulate Images
image = "0.25"
# Logging
log = "0.4"
env_logger = "0.11"
chrono = "0.4"
# Command line arguments parsing
clap = { version = "4.0", features = ["derive"] }
# Graceful shutdown
signal-hook = "0.3.*"
# Caching
lazy_static = "1.5.*"

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }

# Build dependencies optimised for release
[profile.dev.package."*"]
opt-level = 3
