[package]
name = "neko_server"
version = "1.0.7"
edition = "2021"

[[bin]]
name = "neko_server"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
# Command line arguments parsing
clap = { version = "4.0", features = ["derive"] }
env_logger = "0.11"
# Manipulate Images
image = "0.25"
# Caching
lazy_static = "1.5.*"
# JSON API support
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Cache key hashing
sha2 = "0.11"
# HTTP client for gallery-dl worker
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls-tls"] }
# Logging
log = "0.4"
# Interact with Redis Database
redis = { version = "1.0", features = ["connection-manager", "tokio-comp"] }
# Graceful shutdown
signal-hook = "0.4"
# Async
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
# Webserver
warp = { version = "0.4", features = ["server"] }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

# Build dependencies optimised for release
[profile.dev.package."*"]
opt-level = 3
